# Laminae

./: Cargo.toml  README.md
crates/laminae/: Cargo.toml
crates/laminae-anthropic/: Cargo.toml
crates/laminae-anthropic/src/: lib.rs
crates/laminae-cortex/: Cargo.toml
crates/laminae-cortex/benches/: cortex_bench.rs
crates/laminae-glassbox/: Cargo.toml
crates/laminae-glassbox/benches/: glassbox_bench.rs
crates/laminae-ironclad/: Cargo.toml
crates/laminae-ironclad/benches/: ironclad_bench.rs
crates/laminae-ironclad/src/: lib.rs
crates/laminae-ironclad/src/sandbox/: linux.rs  macos.rs  mod.rs  noop.rs
crates/laminae-openai/: Cargo.toml
crates/laminae-openai/src/: lib.rs
crates/laminae-persona/: Cargo.toml
crates/laminae-persona/benches/: persona_bench.rs
crates/laminae-shadow/: Cargo.toml
crates/laminae-shadow/benches/: shadow_bench.rs
crates/laminae/src/: lib.rs
crates/laminae/tests/: t01_glassbox_ironclad.rs  t02_shadow_pipeline.rs  t03_cortex_learning.rs  t04_persona_filter.rs  t05_full_stack.rs  t06_adversarial.rs
crates/laminae/tests/common/: mod.rs
