[package]
name = "laminae"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "The missing layer between raw LLMs and production AI — personality, safety, sandboxing, containment"
keywords = ["ai", "llm", "safety", "personality", "guardrails"]
categories = ["api-bindings", "development-tools"]

[features]
default = []
anthropic = ["dep:laminae-anthropic"]
openai = ["dep:laminae-openai"]
all-backends = ["anthropic", "openai"]

[dependencies]
laminae-psyche = { workspace = true }
laminae-shadow = { workspace = true }
laminae-ironclad = { workspace = true }
laminae-glassbox = { workspace = true }
laminae-ollama = { workspace = true }
laminae-persona = { workspace = true }
laminae-cortex = { workspace = true }
laminae-anthropic = { workspace = true, optional = true }
laminae-openai = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
chrono = { workspace = true }
